2007-11-14  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Don't interpret tab as a reindent
	  command when there's a selection. Fixes "Bug 341319 - Tab not working
	  correctly". Also, remove a load of dead code.

2007-11-13  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/OverrideCompletionData.cs: When generating overrides, only call the
	  base if it's non-abstract and not an interface, else generate a
	  NotImplementedException. Fixes "Bug 341495 - Problem with auto-generated
	  code for overriden methods".

2007-11-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fix completion of 'new'.

2007-11-13  Mike Krüger <mkrueger@novell.com> 

	* Parser/Resolver.cs: Fixed "Bug 339209 - App crashes when trying to list
	  members in base class when you derive from current class".

2007-11-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Completion check for '#' must be done
	  relative to trigger offset. Fixes bug #338382.

2007-11-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/CSharpVisitor.cs: Set the explicit declaration type for indexers.
	* Parser/CodeGenerator.cs: Workaround for bug in the code generator. Generic
	  private implementation types are not generated correctly when they are
	  generic.

2007-11-12  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: see/seealso tags are now generated with
	  cref (xml doc completion).

2007-11-12  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed "Bug 340875 - Bugs while using XML
	  comments".

2007-11-11  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fix part 1 of "Bug 340875 - Bugs 
	  while using XML comments". Smart indent for newlines in doc comments 
	  was being triggered by the Enter command with the autocompletion 
	  dropdown.

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 
