@@ -315,7 +315,7 @@ namespace CSharpBinding
 
 
 		// Snatched from our codedom code :-).
-		static Regex regexError = new Regex (@"^(\s*(?<file>.*)\((?<line>\d*)(,(?<column>\d*[\+]*))?\)(:|)\s+)*(?<level>\w+)\s*(?<number>.*):\s(?<message>.*)",
+		static Regex regexError = new Regex (@"^(\s*(?<file>.*)\((?<line>\d*)(,(?<column>\d*[\+]*))?\)(:|)\s+)*(?<level>\w+)\s*(?<number>.*\d):\s*(?<message>.*)",
 			RegexOptions.Compiled | RegexOptions.ExplicitCapture);
 
 		private static CompilerError CreateErrorFromString(string error_string)
